--- a/composer.json
+++ b/composer.json
@@ -48,9 +48,7 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
- "post-install-cmd": [
-        "Illuminate\\Foundation\\ComposerScripts::postInstall"
-    ],
+ "post-install-cmd": []
     },
     "extra": {
         "laravel": {
